# test-actions

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  test-macos.sh  watchfiles-0.21.0-cp311-cp311-macosx_10_12_x86_64.macosx_11_0_arm64.macosx_10_12_universal2.whl
.github/workflows/: macos-test.yml  main.yml  release.yml  remove-old-artifacts.yml
client/: package-lock.json  package.json
test_actions/: __main__.py  _entrypoint.py
