[tool.poetry]
name = "test-actions"
version = "0.1.0"
description = ""
authors = ["david-why <david_why@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
aiohttp = "^3.9.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
quart = "^0.19.4"
aiofiles = "^23.2.1"
markupsafe = [
    {markers = "sys_platform == 'darwin'", url = "https://files.pythonhosted.org/packages/fe/09/c31503cb8150cf688c1534a7135cc39bb9092f8e0e6369ec73494d16ee0e/MarkupSafe-2.1.3-cp311-cp311-macosx_10_9_universal2.whl"},
    {markers = "sys_platform != 'darwin'", version = "^2.1.3", source = "pypi"}
]
quart-cors = "^0.7.0"

# macos universal2 hack
watchfiles = [
    {markers = "sys_platform == 'darwin'", path = "./watchfiles-0.21.0-cp311-cp311-macosx_10_12_x86_64.macosx_11_0_arm64.macosx_10_12_universal2.whl"},
    {markers = "sys_platform != 'darwin'", version = "^0.21.0", source = "pypi"}
]

[tool.poetry.group.actions]
optional = true

[tool.poetry.group.actions.dependencies]
pyinstaller = "^6.2.0"


[tool.poetry.group.dev.dependencies]
tomlkit = "^0.12.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
