[tool.poetry]
name = "test-actions"
version = "0.1.0"
description = ""
authors = ["david-why <david_why@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
quart = "^0.19.4"
aiofiles = "^23.2.1"
quart-cors = "^0.7.0"

# macos universal2 hack
aiohttp = [
    {markers = "sys_platform == 'darwin'", url = "https://files.pythonhosted.org/packages/19/bc/cfb51d97646cd67cebd90f0b5b0bebe063ebc8efd93e888b0aed9d74a549/aiohttp-3.9.3-cp311-cp311-macosx_10_9_universal2.whl"},
    {markers = "sys_platform != 'darwin'", version = "^3.9.1", source = "pypi"}
]

watchfiles = [
    {markers = "sys_platform == 'darwin'", path = "./watchfiles-0.21.0-cp311-cp311-macosx_10_12_x86_64.macosx_11_0_arm64.macosx_10_12_universal2.whl"},
    {markers = "sys_platform != 'darwin'", version = "*", source = "pypi"}
]
frozenlist = [
    {markers = "sys_platform == 'darwin'", url = "https://files.pythonhosted.org/packages/01/bc/8d33f2d84b9368da83e69e42720cff01c5e199b5a868ba4486189a4d8fa9/frozenlist-1.4.1-cp311-cp311-macosx_10_9_universal2.whl"},
    {markers = "sys_platform != 'darwin'", version = "*", source = "pypi"}
]
httptools = [
    {markers = "sys_platform == 'darwin'", url = "https://files.pythonhosted.org/packages/f5/d1/53283b96ed823d5e4d89ee9aa0f29df5a1bdf67f148e061549a595d534e4/httptools-0.6.1-cp311-cp311-macosx_10_9_universal2.whl"},
    {markers = "sys_platform != 'darwin'", version = "*", source = "pypi"}
]
markupsafe = [
    {markers = "sys_platform == 'darwin'", url = "https://files.pythonhosted.org/packages/fe/09/c31503cb8150cf688c1534a7135cc39bb9092f8e0e6369ec73494d16ee0e/MarkupSafe-2.1.3-cp311-cp311-macosx_10_9_universal2.whl"},
    {markers = "sys_platform != 'darwin'", version = "*", source = "pypi"}
]
multidict = [
    {markers = "sys_platform == 'darwin'", url = "https://files.pythonhosted.org/packages/5f/da/b10ea65b850b54f44a6479177c6987f456bc2d38f8dc73009b78afcf0ede/multidict-6.0.5-cp311-cp311-macosx_10_9_universal2.whl"},
    {markers = "sys_platform != 'darwin'", version = "*", source = "pypi"}
]
uvloop = [
    {markers = "sys_platform == 'darwin'", url = "https://files.pythonhosted.org/packages/41/2a/608ad69f27f51280098abee440c33e921d3ad203e2c86f7262e241e49c99/uvloop-0.19.0-cp311-cp311-macosx_10_9_universal2.whl"},
    {markers = "sys_platform != 'darwin'", version = "*", source = "pypi"}
]
websockets = [
    {markers = "sys_platform == 'darwin'", url = "https://files.pythonhosted.org/packages/02/73/9c1e168a2e7fdf26841dc98f5f5502e91dea47428da7690a08101f616169/websockets-12.0-cp311-cp311-macosx_10_9_universal2.whl"},
    {markers = "sys_platform != 'darwin'", version = "*", source = "pypi"}
]
yarl = [
    {markers = "sys_platform == 'darwin'", url = "https://files.pythonhosted.org/packages/12/65/4c7f3676209a569405c9f0f492df2bc3a387c253f5d906e36944fdd12277/yarl-1.9.4-cp311-cp311-macosx_10_9_universal2.whl"},
    {markers = "sys_platform != 'darwin'", version = "*", source = "pypi"}
]

[tool.poetry.group.actions]
optional = true

[tool.poetry.group.actions.dependencies]
pyinstaller = "^6.2.0"


[tool.poetry.group.dev.dependencies]
tomlkit = "^0.12.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
