[tool.poetry]
name = "test-actions"
version = "0.1.0"
description = ""
authors = ["david-why <david_why@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
aiohttp = "^3.9.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
quart = "^0.19.4"
aiofiles = "^23.2.1"
quart-cors = "^0.7.0"

[tool.poetry.group.actions]
optional = true

[tool.poetry.group.actions.dependencies]
pyinstaller = "^6.2.0"


[tool.poetry.group.dev.dependencies]
tomlkit = "^0.12.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
